--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-tailwind-working",
-  "homepage": "https://Priyanshu4585.github.io/rental-page",
+  "homepage": "https://Priyanshu4585.github.io/rental-page/",
   "private": true,
   "version": "0.0.1",
   "type": "module",
